# bs-webctl

./: .gitignore  AGENTS.md  Agent-SE-SPEC.md  Arcadia-SPEC.md  README.md  pyproject.toml
adr/: ADR-0001.md  ADR-0003.md
bs_webctl/: __main__.py  cli.py  driver.py
features/: install-extension.feature  scan-exec.feature  server-connect.feature
prd/: PRD-bs-webctl.md
scripts/: install-hooks.sh
scripts/hooks/: commit-msg  pre-commit
