[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bs-webctl"
version = "0.1.0"
description = "Standalone browser-control CLI for AI agents — TMWebDriver + simphtml, extracted from GenericAgent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "GenericAgent" }]
keywords = ["browser", "chrome", "cli", "ai-agent", "websocket", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "bottle>=0.12",
    "beautifulsoup4>=4.9",
    "requests>=2.20",
]

[project.scripts]
bs-webctl = "bs_webctl.cli:main"

[project.urls]
Homepage = "https://github.com/JinyiHan99/GenericAgent"

[tool.hatch.build.targets.wheel]
packages = ["bs_webctl"]
artifacts = [
    "bs_webctl/extension/tmwd_cdp_bridge.zip",
]

[tool.hatch.build.targets.wheel.force-include]
"bs_webctl/extension_src" = "bs_webctl/extension_src"
"bs_webctl/extension/tmwd_cdp_bridge.zip" = "bs_webctl/extension/tmwd_cdp_bridge.zip"
